--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                       <div class="col-md-1"></div>
                       <div class="col-md-7">
                           <div>
-                              <img src="images/origami.jpg" alt="image is here" width=100%;/>
+                              <img src="images/origami.JPG" alt="image is here" width=100%;/>
                           </div>
                       </div>
                       <div class="col-md-2"></div>
@@ -104,16 +104,16 @@
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                              <img src="images/crafts/quilling2.jpg" alt="hitler not here" style="height:100%; width:100%; padding:0;">
+                              <img src="images/crafts/quilling2.JPG" alt="hitler not here" style="height:100%; width:100%; padding:0;">
                             </div>
                             <div class="item">
                               <img src="images/digitalArt/cup_2.png" alt="hitler not here" style="height:100%; width:100%; padding:0;">
                             </div>
                             <div class="item">
-                              <img src="images/drawings/owl2.jpg" alt="hitler not here" style="height:100%; width:100%; padding:0;">
+                              <img src="images/drawings/owl2.JPG" alt="hitler not here" style="height:100%; width:100%; padding:0;">
                             </div>
                             <div class="item">
-                              <img src="images/photography/DSC06232.jpg" alt="hitler not here" style="height:100%; width:100%; padding:0;">
+                              <img src="images/photography/DSC06232.JPG" alt="hitler not here" style="height:100%; width:100%; padding:0;">
                             </div>
                           </div>
 
