--- a/myWorks.html
+++ b/myWorks.html
@@ -102,7 +102,7 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC02446.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC02446.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -112,7 +112,7 @@
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC06243.jpg" alt="image is here" />
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC06243.JPG" alt="image is here" />
 								</a>
 						</div>
 				</div>
@@ -124,17 +124,17 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01824.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01824.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01825.jpg" alt="image is here" />
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01825.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC02206.jpg" alt="image is here" />
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC02206.JPG" alt="image is here" />
 								</a>
 						</div>
 				</div>
@@ -145,7 +145,7 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC02199.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC02199.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -155,7 +155,7 @@
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC06232.jpg" alt="image is here" />
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC06232.JPG" alt="image is here" />
 								</a>
 						</div>
 				</div>
@@ -167,17 +167,17 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC05995.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC05995.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01670.jpg" alt="image is here" />
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01670.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01846.jpg" alt="image is here" />
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/photography/DSC01846.JPG" alt="image is here" />
 								</a>
 						</div>
 				</div>
@@ -238,7 +238,7 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/crafts/butterflies.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/crafts/butterflies.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -264,7 +264,7 @@
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 	              <a href="#" class="image1 images_drawing">
-	                <img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/crafts/quilling2.jpg" alt="image is here" />
+	                <img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/crafts/quilling2.JPG" alt="image is here" />
 	              </a>
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -307,7 +307,7 @@
 	      <div class="col-md-20 col-xs-16">
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 	              <a href="#" class="image1 images_drawing">
-	                <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/man_woman.jpg" alt="image is here" />
+	                <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/man_woman.jJPG" alt="image is here" />
 	              </a>
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -317,7 +317,7 @@
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 	              <a href="#" class="image1 images_drawing">
-	                <img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/flowers.jpg" alt="image is here" />
+	                <img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/flowers.JPG" alt="image is here" />
 	              </a>
 	          </div>
 	      </div>
@@ -329,7 +329,7 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/owl.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/owl.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -339,7 +339,7 @@
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/nature.jpg" alt="image is here" />
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/nature.JPG" alt="image is here" />
 								</a>
 						</div>
 				</div>
@@ -351,7 +351,7 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/time.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/time.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -373,12 +373,12 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image2 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/elephant.jpg" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/elephant.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image2 images_drawing">
-									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/horse.jpg" alt="image is here" />
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/horse.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
@@ -400,7 +400,7 @@
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 								<a href="#" class="image2 images_drawing">
-									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/bird.jpg" alt="image is here" />
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/bird.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
