--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                           </div>
                       </div>
                       <div class="col-md-1"></div>
-                      <div class="col-md-7 my_contacts_info sm-ml-60">
+                      <div class="col-md-7 my_contacts_info md-ml-60">
                           <div class="my_credentials">
                             <label for="my_name">My Name:</label>
                             <span>Minu</span>
