--- a/css/fonts/dancing-script/dancingscript-regular-demo.html
+++ b/css/fonts/dancing-script/dancingscript-regular-demo.html
@@ -19,11 +19,11 @@
 
 	<style type="text/css">
 					body{
-				font-family: 'danielregular';
+				font-family: 'dancing_script_otregular';
 							}
 		</style>
 
-	<title>Daniel Regular Specimen</title>
+	<title>Dancing Script OT Regular Specimen</title>
 	
 	
 	<script type="text/javascript" charset="utf-8">
@@ -36,7 +36,7 @@
 <body>
 <div id="container">
 	<div id="header">
-		Daniel Regular	</div>
+		Dancing Script OT Regular	</div>
 	<ul class="tabs">
 		<li><a href="#specimen">Specimen</a></li>
 		<li><a href="#layout">Sample Layout</a></li>
@@ -91,7 +91,7 @@
 										<div id="xheight">
 				<div class="fontbody">&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;&#x25FC;body</div><div class="arialbody">body</div><div class="verdanabody">body</div><div class="georgiabody">body</div></div>
 										<div class="fontbody" style="z-index:1">
-											body<span>Daniel Regular</span>
+											body<span>Dancing Script OT Regular</span>
 										</div>
 										<div class="arialbody" style="z-index:1">
 											body<span>Arial</span>
@@ -296,15 +296,13 @@
 				<div class="grid12 firstcol">
 			
 				<h1>Language Support</h1>
-				<p>The subset of Daniel Regular in this kit supports the following languages:<br />
+				<p>The subset of Dancing Script OT Regular in this kit supports the following languages:<br />
 			
 					Albanian, Basque, Breton, Chamorro, Danish, Dutch, English, Faroese, Finnish, French, Frisian, Galician, German, Icelandic, Italian, Malagasy, Norwegian, Portuguese, Spanish, Alsatian, Aragonese, Arapaho, Arrernte, Asturian, Aymara, Bislama, Cebuano, Corsican, Fijian, French_creole, Genoese, Gilbertese, Greenlandic, Haitian_creole, Hiligaynon, Hmong, Hopi, Ibanag, Iloko_ilokano, Indonesian, Interglossa_glosa, Interlingua, Irish_gaelic, Jerriais, Lojban, Lombard, Luxembourgeois, Manx, Mohawk, Norfolk_pitcairnese, Occitan, Oromo, Pangasinan, Papiamento, Piedmontese, Potawatomi, Rhaeto-romance, Romansh, Rotokas, Sami_lule, Samoan, Sardinian, Scots_gaelic, Seychelles_creole, Shona, Sicilian, Somali, Southern_ndebele, Swahili, Swati_swazi, Tagalog_filipino_pilipino, Tetum, Tok_pisin, Uyghur_latinized, Volapuk, Walloon, Warlpiri, Xhosa, Yapese, Zulu, Latinbasic, Ubasic, Demo				</p>
 				<h1>Glyph Chart</h1>
-				<p>The subset of Daniel Regular in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
+				<p>The subset of Dancing Script OT Regular in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
 				<div id="glyph_chart">
 			
-																				 <div><p>&amp;#9;</p>&#9;</div>
-																				 <div><p>&amp;#13;</p>&#13;</div>
 																				 <div><p>&amp;#32;</p>&#32;</div>
 																				 <div><p>&amp;#33;</p>&#33;</div>
 																				 <div><p>&amp;#34;</p>&#34;</div>
@@ -404,6 +402,7 @@
 																				 <div><p>&amp;#161;</p>&#161;</div>
 																				 <div><p>&amp;#162;</p>&#162;</div>
 																				 <div><p>&amp;#163;</p>&#163;</div>
+																				 <div><p>&amp;#164;</p>&#164;</div>
 																				 <div><p>&amp;#165;</p>&#165;</div>
 																				 <div><p>&amp;#166;</p>&#166;</div>
 																				 <div><p>&amp;#167;</p>&#167;</div>
@@ -414,7 +413,6 @@
 																				 <div><p>&amp;#172;</p>&#172;</div>
 																				 <div><p>&amp;#173;</p>&#173;</div>
 																				 <div><p>&amp;#174;</p>&#174;</div>
-																				 <div><p>&amp;#175;</p>&#175;</div>
 																				 <div><p>&amp;#176;</p>&#176;</div>
 																				 <div><p>&amp;#177;</p>&#177;</div>
 																				 <div><p>&amp;#178;</p>&#178;</div>
