--- a/myWorks.html
+++ b/myWorks.html
@@ -307,7 +307,7 @@
 	      <div class="col-md-20 col-xs-16">
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
 	              <a href="#" class="image1 images_drawing">
-	                <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/man_woman.jJPG" alt="image is here" />
+	                <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/man_woman.JPG" alt="image is here" />
 	              </a>
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-20 xs-p-0">
