--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                       <div class="col-md-1"></div>
                       <div class="col-md-7">
                           <div>
-                              <img src="images/craft.jpg" alt="image is here" width=100%;/>
+                              <img src="images/time.JPG" alt="image is here" width=100%;/>
                           </div>
                       </div>
                       <div class="col-md-2"></div>
