padding remove in carousel

--- a/index.html
+++ b/index.html
@@ -68,29 +68,7 @@
 
               <div class="row">
                   <div class="col-md-24 xs-pt-70 xs-pb-70 sections" id="work">
-                      <!-- <div class="row">
-                          <div class="col-md-2 col-xs-4"></div>
-                          <div class="col-md-20 col-xs-16">
-                              <div class="col-md-8 col-xs-24 md-pt-0 xs-pt-20">
-                                  <a href="#" class="pop">
-                                      <img src="images/origami.jpg"  alt="image is here" width=100%;/>
-                                  </a>
-                              </div>
-                              <div class="col-md-8 col-xs-24 md-pt-0 xs-pt-20">
-                                  <a href="#" class="pop">
-                                      <img src="images/origami.jpg"  alt="image is here" width=100%;/>
-                                  </a>
-                              </div>
-                              <div class="col-md-8 col-xs-24 md-pt-0 xs-pt-20">
-                                  <a href="#" class="pop">
-                                      <img src="images/origami.jpg"  alt="image is here" width=100%;/>
-                                  </a>
-                              </div>
-                          </div>
-                          <div class="col-md-2 col-xs-4"></div>
-                      </div> -->
-
-                      <div id="image_carousel" class="jumbotron jumbo2">
+                      <div id="image_carousel" class="jumbotron jumbo2 xs-p-0">
 
                         <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
                           <!-- Indicators -->
