added image in front

--- a/index.html
+++ b/index.html
@@ -13,26 +13,38 @@
 <body>
 <div class="back_ground">
 <!-- <div class="" style="background-color:#C3ECF0;"> -->
+<div class="row xs-m-0 xs-p-0">
+    <div class="col-md-24 xs-p-0" id="home">
+            <div class="home_page">
+              <div class="item">
+                <img src="images/photography/DSC06232.JPG" alt="hitler not here" style="width:100%;"><span class="welcome_text xs-pl-50">Welcome<br/>To<br/>My Site . . .</span>
+              </div>
+            </div>
+    </div>
+    <hr class="separator"/>
+</div>
 <div class="container page">
+
   <!-- start of navigation bar -->
   <div class="mainPage">
-  <nav class="navbar navbar-inverse navbar-fixed-top fixed-top xs-ml-0 xs-mr-0 page-nav">
-      <div class="navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav top_nav">
-              <li><a class="links active" href="#about"><span>About</span></a></li>
-              <li><a class="links" href="#projects"><span>projects</span></a></li>
-              <li><a class="links" href="#work">Work</a></li>
-              <li><a class="links" href="#contact">Contact</a></li>
-          </ul>
-      </div>
-      <hr class="nav_separator"/>
-  </nav>
-
-        <div class="row">
+    <nav class="navbar navbar-inverse navbar-fixed-top fixed-top xs-ml-0 xs-mr-0 page-nav">
+        <div class="navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav top_nav xs-mr-80">
+                <li><a class="links active" href="#home"><span>Home</span></a></li>
+                <li><a class="links" href="#about"><span>About</span></a></li>
+                <li><a class="links" href="#projects"><span>projects</span></a></li>
+                <li><a class="links" href="#work">Work</a></li>
+                <li><a class="links" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <hr class="nav_separator"/>
+    </nav>
+          <div class="row">
                   <div class="col-md-24 xs-pt-70 xs-pb-70 sections" id="about">
                       <div class="col-md-2"></div>
                       <div class="col-md-12">
                           <div class="about_me">
+                            <h2>About Me</h2>
                               We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                           </div>
                       </div>
@@ -52,6 +64,7 @@
                       <div class="col-md-2"></div>
                       <div class="col-md-12">
                           <div class="projects_me">
+                            <h2>Project Works</h2>
                               We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                           </div>
                       </div>
@@ -107,7 +120,9 @@
                         </div>
                       </div>
 
-                      <div class="see_more"><button class="see_more_btn btn btn-default"><a href="myWorks.html" target="_blank">See More</a></button></div>
+                      <div class="see_more"><span class="xs-pl-10">Click to see more works here...</span>
+                      <span><button class="see_more_btn btn btn-default"><a href="myWorks.html" target="_blank">Gallery</a></button></span>
+                      </div>
 
                   </div>
                   <hr class="separator"/>
@@ -125,11 +140,11 @@
                               </div>
                               <div class="form-group">
                                 <label for="email">Your Email Address:</label>
-                                <input type="password" class="form-control" id="email" placeholder="your email address">
+                                <input type="" class="form-control" id="email" placeholder="your email address">
                               </div>
                               <div class="form-group">
                                 <label>Comments</label>
-                                <textarea rows="12" cols="50" class="comments" placeholder="your comments are valuable"></textarea>
+                                <textarea rows="12" cols="50" class="comments xs-p-10" placeholder="your comments are valuable"></textarea>
                               </div>
                               <div class="checkbox">
                                 <label><input type="checkbox"> Remember me</label>
