--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
                       <div class="col-md-12">
                           <div class="about_me">
                             <h2>About Me</h2>
-                              We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <ul>
+                              <li>Presently I am working as a Front-End Developer at Deloitte USI.</li>
+                              <li>I am a graduate with B.Tech degree in Electrical Engineering from HBTI.</li>
+                              <li>I am also a part-time Volunteer with "Youth for Seva".</li>
+                            </ul>
+                            I like to spend my spare time by <i>drawing, sketching, design 3D objects on Inventor, and origami and sometimes volunteer with 'YFS'</i>.
+                          </div>
+                          <br/>
+                          <div class="text-center text_bottom"><span class="underline">Download My Resume Here...</span>
+                            <a href="Minu.pdf" class="resume xs-ml-10" target="_blank">My Resume</a>
                           </div>
                       </div>
                       <div class="col-md-1"></div>
@@ -120,7 +129,7 @@
                         </div>
                       </div>
 
-                      <div class="see_more"><span class="xs-pl-10">Click to see more works here...</span>
+                      <div class="see_more"><span class="xs-pl-10 underline">Click to see more works here...</span>
                       <span><button class="see_more_btn btn btn-default"><a href="myWorks.html" target="_blank">Gallery</a></button></span>
                       </div>
 
@@ -133,6 +142,7 @@
                       <div class="col-md-2"></div>
                       <div class="col-md-12">
                           <div class="contact_me">
+                            <h2>Contact Me</h2>
                             <form action="/action_page.php">
                               <div class="form-group">
                                 <label for="name">Your Name:</label>
@@ -181,8 +191,8 @@
 </div>
 <!-- end of navigation bar -->
 </div>
+<a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none;">Top<span></span></a>
 </div>
     <script src="functions.js"></script>
 </body>
-
 </html>
