my resume button fixed

--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
                             I like to spend my spare time by <i>drawing, sketching, design 3D objects on Inventor, and origami and sometimes volunteer with 'YFS'</i>.
                           </div>
                           <br/>
-                          <div class="text-center text_bottom"><span class="underline">Download My Resume Here...</span>
-                            <a href="Minu.pdf" class="resume xs-ml-10" target="_blank">My Resume</a>
+                          <div class="see_more">
+                            <span class="xs-pl-10 underline">Download My Resume Here...</span>
+                          <span>
+                            <button class="see_more_btn btn btn-default">
+                            <a href="Minu.pdf" class="xs-ml-10" target="_blank">My Resume</a>
+                            </button>
+                          </span>
                           </div>
                       </div>
                       <div class="col-md-1"></div>
