extra padding removed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <span class="xs-pl-10 underline">Download My Resume Here...</span>
                           <span>
                             <button class="see_more_btn btn btn-default">
-                            <a href="Minu.pdf" class="xs-ml-10" target="_blank">My Resume</a>
+                            <a href="Minu.pdf" target="_blank">My Resume</a>
                             </button>
                           </span>
                           </div>
