--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                             I like to spend my spare time by <i>drawing, sketching, design 3D objects on Inventor, and origami and sometimes volunteer with 'YFS'</i>.
                           </div>
                           <br/>
-                          <div class="see_more">
-                            <span class="xs-pl-10 underline">Download My Resume Here...</span>
+                          <div class="see_more text_bottom">
+                            <span class="xs-pl-10 underline">Download My Resume...</span>
                           <span>
                             <button class="see_more_btn btn btn-default">
                             <a href="Minu.pdf" target="_blank">My Resume</a>
@@ -167,7 +167,7 @@
                         </div>
                       </div>
 
-                      <div class="see_more"><span class="xs-pl-10 underline">Click to see more works here...</span>
+                      <div class="see_more"><span class="xs-pl-10 underline">Click to see more works...</span>
                       <span><button class="see_more_btn btn btn-default"><a href="myWorks.html" target="_blank">Gallery</a></button></span>
                       </div>
 
